@@ -20,7 +20,6 @@
 package com.aimluck.eip.modules.screens;
 
 import java.io.InputStream;
-import java.net.URI;
 import java.net.URL;
 
 import javax.servlet.ServletOutputStream;
@@ -62,15 +61,7 @@ public class ProxyScreen extends ALVelocityScreen {
       return;
     }
 
-    URI uri = new URI(urlString).normalize();
-    String path =
-      uri.getPath().replaceAll("\\.\\./", "").replaceAll("\\./", "");
-    URL url =
-      new URL(String.format(
-        "%s://%s%s",
-        uri.getScheme(),
-        uri.getAuthority(),
-        path));
+    URL url = new URL(urlString);
 
     InputStream in = url.openStream();
     ServletOutputStream out = null;
